--- a/sample/kubernetes/deployment/sample.yml
+++ b/sample/kubernetes/deployment/sample.yml
@@ -1,7 +1,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: person-app
+  name: person
   labels:
     app: person
 spec:
@@ -15,7 +15,7 @@ spec:
         app: person
     spec:
       containers:
-      - name: person-pod
+      - name: person
         image: 'master:32000/person:latest'
         env:
         - name: SPRING_DATASOURCE_URL
@@ -41,7 +41,7 @@ spec:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: auftrag-app
+  name: auftrag
   labels:
     app: auftrag
 spec:
@@ -55,7 +55,7 @@ spec:
         app: auftrag
     spec:
       containers:
-      - name: auftrag-pod
+      - name: auftrag
         image: 'master:32000/auftrag:latest'
         env:
         - name: SPRING_DATASOURCE_URL
@@ -81,7 +81,7 @@ spec:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: shop-app
+  name: shop
   labels:
     app: shop
 spec:
@@ -95,7 +95,7 @@ spec:
         app: shop
     spec:
       containers:
-      - name: shop-pod
+      - name: shop
         image: 'master:32000/shop:latest'
         env:
         - name: KEYCLOAK_AUTH_SERVER_URL
@@ -119,7 +119,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: sample-ingress
+  name: sample
 spec:
   rules:
     - http:
