--- a/sample/kubernetes/docker/docker-compose.yml
+++ b/sample/kubernetes/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   idm:
     container_name: idm
-    image: quay.io/keycloak/keycloak:18.0.2-legacy
+    image: quay.io/keycloak/keycloak:19.0.3-legacy
     ports:
       - 0.0.0.0:8080:8080
     volumes:
@@ -12,7 +12,7 @@ services:
       - KEYCLOAK_IMPORT=/tmp/keycloak/java-starter-realm.json
   db-person:
     container_name: db-person
-    image: postgres:15.1-bullseye
+    image: postgres:15.2-alpine
     ports:
       - 0.0.0.0:5434:5432
     environment:
@@ -21,7 +21,7 @@ services:
       - POSTGRES_DB=person
   db-auftrag:
     container_name: db-auftrag
-    image: postgres:15.1-bullseye
+    image: postgres:15.2-alpine
     ports:
       - 0.0.0.0:5433:5432
     environment:
