--- a/step0090/docker/src/test/docker/docker-compose.yml
+++ b/step0090/docker/src/test/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: postgres:11.14-bullseye
+    image: postgres:15.2-alpine
     ports:
       - 5432:5432
     environment:
